fix(code animation exhibition): Now you can see full content in code-wrapping mode by scrolling.

--- a/static/css/code.css
+++ b/static/css/code.css
@@ -18,20 +18,29 @@ body {
 
 .container {
     width: 100%;
-    /* height: 500px; */
     display: flex;
     flex-direction: column;
     position: relative;
     overflow: hidden;
 }
 
+.animation_container {
+    width: 100%;
+    height: 400px;
+    /* display: flex; */
+    /* flex-direction: column; */
+    position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 /* Allow content to expand naturally */
 .code-display {
     background: #ffffff;
     padding: 15px;
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: auto;
+    /* height: 400px; */
+    /* overflow-y: visible; */
+    /* overflow-x: auto; */
     white-space: pre;
     position: relative;
     font-size: 12px;
